imporve security+some functionalities

--- a/HelloJS/index.html
+++ b/HelloJS/index.html
@@ -12,7 +12,7 @@
             <td>
                 <div id="divOutput" style="white-space: pre-wrap;"> This is where output goes </div>
                 <input id="btnRun" type="submit" value="Run" accesskey="r">
-                <input id="btnClear" type="submit" value="Clear" accesskey="r">
+                <input id="btnClear" type="submit" value="Clear" accesskey="e">
             </td>
         </tr>
     </table>
